InventoryManagement/force-app/main/default/objects/Custom_Order__c/Custom_Order__c.object-meta.xml
<CustomObject>
    <label>Custom Order</label>
    <nameField>
        <displayFormat>Order-id-{000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>