InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/AddedToInventory__c.field-meta.xml
<CustomField>
    <fullName>AddedToInventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Private field to add to inventory only once per order</description>
    <label>AddedToInventory</label>
    <type>Checkbox</type>
</CustomField>