InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/Estimated_Recieve_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Recieve_Date_End__c</fullName>
    <label>Estimated Recieve Date End</label>
    <type>DateTime</type>
</CustomField>