InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/Order_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Custom Orders</relationshipLabel>
    <relationshipName>Custom_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>