InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>picked</fullName>
            </value>
            <value>
                <fullName>sent for delivery</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>returned</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Returned to manufacture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>