InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Orders</relationshipLabel>
    <relationshipName>Custom_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>