InventoryManagement/force-app/main/default/objects/Custom_Order__c/fields/Tracking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Reference__c</fullName>
    <label>Tracking Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>