InventoryManagement/force-app/main/default/objects/Custom_Order__c/recordTypes/Canceled.recordType-meta.xml
<RecordType>
    <fullName>Canceled</fullName>
    <active>true</active>
    <description>Canceled, rejected, or returned</description>
    <label>Canceled</label>
</RecordType>