InventoryManagement/force-app/main/default/objects/Custom_Order__c/recordTypes/Inbound_Order.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Order</fullName>
    <active>true</active>
    <label>Inbound Order</label>
</RecordType>