InventoryManagement/force-app/main/default/objects/Custom_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>