InventoryManagement/force-app/main/default/objects/Custom_Order__c/listViews/Incoming.listView-meta.xml
<ListView>
    <fullName>Incoming</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Estimated_Recieve_Date_End__c</columns>
    <columns>Estimated_Recieve_Date_Start__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Tracking_Reference__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Custom_Order__c.Inbound_Order</value>
    </filters>
    <label>Incoming</label>
    <sharedTo>
        <role>Acquisition_Manager</role>
        <role>CEO</role>
        <role>CIO</role>
    </sharedTo>
</ListView>