InventoryManagement/force-app/main/default/objects/Custom_Order__c/listViews/Order_Tracking.listView-meta.xml
<ListView>
    <fullName>Order_Tracking</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Tracking_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>Order Tracking</label>
</ListView>