InventoryManagement/force-app/main/default/objects/Custom_Order__c/listViews/Outgoing.listView-meta.xml
<ListView>
    <fullName>Outgoing</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Custom_Order__c.Outbound_Order</value>
    </filters>
    <label>Outgoing</label>
    <sharedTo>
        <role>CEO</role>
        <role>CIO</role>
        <role>COO</role>
    </sharedTo>
</ListView>